2006-08-22  Jean-Louis Martineau <martineau@zmanda.com>
	* tape-src/output-tape.c: Works if EOVERFLOW is not defined.

2006-08-21  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, common-src/rsh-security.c,
	  common-src/ssh-security.c, restore-src/restore.c,
	  server-src/changer.c, server-src/dumper.c: Fix sentinel warning.

2006-08-21  Jean-Louis Martineau <martineau@zmanda.com>
	* example/amanda.conf.in: Typo.

2006-08-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c: Fix bogus "(unsigned long)-1".

2006-08-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (start_some_dumps): Remove bogus free_assignedhd.

2006-07-28  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.1b2 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.1b2).

2006-07-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (find_diskspace): Make sure size > 0.

2006-07-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Don't check new disk.

2006-07-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Always log if full size estimate is larger
				than the available tape space.

2006-07-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Always log if the latest full dump will be
				overwritten soon.

2006-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/clock.c (timesub): Don't make a negative time.

2006-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Tell which file are loaded.
	* man/xml-source/amanda-client.conf.5.xml: Ditto.

2006-07-26  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: for 2.5.1b2.

2006-07-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.h (CONFTYPE_HOLDING): New conftype.
	* common-src/util.c (conf_init_holding, conf_set_holding,
			     get_conftype_hold): New fonction.
	* example/amanda.conf.in: Example of new holdingdisk value.